--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "d3hiring",
   "version": "1.0.0",
-  "description": "",
+  "description": "d3hiring",
   "main": "./src/index.ts",
   "scripts": {
     "dev": "nodemon",
-    "lint": "yarn run eslint ./src/*",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "lint": "yarn run eslint ./src/*"
   },
   "keywords": [],
   "author": "",
@@ -15,23 +15,32 @@
     "@hapi/hapi": "^20.1.5",
     "class-validator": "^0.13.1",
     "dotenv": "^6.2.0",
-    "fs-extra": "^7.0.1",
     "hapi": "^18.1.0",
+    "hapi-auth-bearer-token": "^8.0.0",
     "joi": "^17.4.1",
     "mysql": "^2.18.1",
     "typeorm": "^0.2.35",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.8",
+    "@babel/preset-env": "^7.14.9",
+    "@babel/preset-typescript": "^7.14.5",
+    "@types/hapi-auth-bearer-token": "^6.1.3",
     "@types/hapi__hapi": "^20.0.9",
+    "@types/jest": "^26.0.24",
     "@types/mssql": "^7.1.3",
     "@types/node": "^16.4.5",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
-    "eslint": "^7.31.0",
+    "babel-jest": "^27.0.6",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jest": "^24.4.0",
+    "jest": "^27.0.6",
     "nodemon": "^2.0.12",
+    "ts-jest": "^27.0.4",
     "ts-node": "^10.1.0"
   }
 }
